
 - with debuild, --build-profiles=pkg.onload.profile-no_shrub
 - with rpmbuild, --define "build_profile no_shrub"
 - with onload_install, --build-profile no_shrub


SHRUB controller lifecycle tunable
----------------------------------

A new option, EF_SHRUB_AUTO_CLOSE_DELAY tunes the behaviour of the new
automatic closing of the shrub controller after all clients have disconnected.


Onload-9.1.0.24
===============

 This is a feature release of Onload adding support for the
 AMD Solarflare(TM) X4 Series Ethernet Adapter. The release
 includes a new version of the sfc net driver and various
 features and fixes.

 This release fully supports X2 and X4 adapters. Onload support
 for X3 is 'beta' in this software release. It is recommended
 that X3 users target migration to the next Onload update.

 It is recommended to read the X4 Migration Guide.

 Please see the ChangeLog for a full list of changes.


Linux distribution support
--------------------------

 This package can be installed on:
 - Red Hat Enterprise Linux 8.10
 - Red Hat Enterprise Linux 9.4 - 9.7(*)
 - Red Hat Enterprise Linux 10.0 - 10.1(*)
 - Canonical Ubuntu Server LTS 22.04 and 24.04
 - Debian 12 "Bookworm"
 - Debian 13 "Trixie"
 - Linux kernels 5.11 - 6.14

(*) At the time of writing, RHEL 9.7 and RHEL 10.1 were in a pre-release state
    but expected to be compatible with this Onload version.


AMD Solarflare(TM) X4 Series Ethernet Adapter
---------------------------------------------

This release adds support for the X4 adapter.

X4 Datapath Selection
---------------------

- The Wire Order API (WODA) is only available for the Enterprise RX path
  (EF_RX_DATAPATH=enterprise)
- Application clustering (SO_REUSEPORT/EF_CLUSTER_SIZE) is only supported with
  EF_RX_DATAPATH=enterprise
- Sharing an event queue between multiple VIs is not supported when using the
  express datapath. This applies to X3 and X4 network cards.

X4 Shrub Diagnostics
--------------------
