@@ -50,6 +50,15 @@ A new option, EF_SHRUB_AUTO_CLOSE_DELAY tunes the behaviour of the new
 automatic closing of the shrub controller after all clients have disconnected.
 
 
+Known issues
+------------
+
+When an ef_vi application using X3 or X4 Express explicitly issues a flush
+a warning message will be emitted to the kernel log of the form:
+efch_vi_rm_rsops: still waiting for flush to complete
+This can safely be ignored.
+
+
 Onload-9.1.0.24
 ===============
 
